Adiciona Google Analytics via analytics.html

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -64,6 +64,7 @@ format:
       - assets/css/custom.css
     toc: true
     highlight-style: github
+    include-in-header: analytics.html
 
 search: true
 
